--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-@import "variables/colors";
-@import "variables/sizes";
-
 /*
  * HTML5 Boilerplate
  *
@@ -8,163 +5,134 @@
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
  * Kroc Camen, and the H5BP dev community and team.
  */
-
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
-
-
-
 html,
 button,
 input,
 select,
 textarea {
   color: #333;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
+  -webkit-tap-highlight-color: transparent; }
 
 html {
-  font-size: 1.25em;
-}
+  font-size: 1.25em; }
+
 body {
   font-weight: 200;
   line-height: 1.45;
   font-family: 'Droid Sans', sans-serif;
-  color: #333;
-}
+  color: #333; }
 
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
  * Customize the background color to match your design.
  */
-
 ::-moz-selection {
   background: #b3d4fc;
-  text-shadow: none;
-}
+  text-shadow: none; }
 
 ::selection {
   background: #b3d4fc;
-  text-shadow: none;
-}
+  text-shadow: none; }
 
 /*
  * A better looking default horizontal rule
  */
-
 hr {
   display: block;
   height: 1px;
   border: 0;
   border-top: 1px solid #ccc;
   margin: 1em 0;
-  padding: 0;
-}
+  padding: 0; }
 
 /*
  * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
  */
-
 img {
-  vertical-align: middle;
-}
+  vertical-align: middle; }
 
 /*
  * Remove default fieldset styles.
  */
-
 fieldset {
   border: 0;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 /*
  * Allow only vertical resizing of textareas.
  */
-
 textarea {
-  resize: vertical;
-}
+  resize: vertical; }
 
 /* ==========================================================================
    Chrome Frame prompt
    ========================================================================== */
-
 .chromeframe {
   margin: 0.2em 0;
   background: #ccc;
   color: #000;
-  padding: 0.2em 0;
-}
+  padding: 0.2em 0; }
 
 /*
 Global Styles
 */
 .slide {
   display: block;
-  width: $slide_width;
-  height: $slide_height;
+  width: 1000px;
+  height: 700px;
   border: 4px solid #00aef0;
-  color: $text;
+  color: #333333;
   background: url("/images/DP_Logo_square.jpg") no-repeat;
-  background-position: top right;
-}
+  background-position: top right; }
 
 div.slide-text {
   margin-left: 0.25em;
-  margin-right: 0.25em;
-}
+  margin-right: 0.25em; }
 
 .centered {
   text-align: center;
-  margin-top: 0.25 * $slide_height;
-}
+  margin-top: 175px; }
 
 a {
   color: #2ec6ff;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 a:hover {
-  text-decoration: underline;
-}
+  text-decoration: underline; }
 
 h1, h2 {
-  color: #00aeef;
-}
+  color: #00aeef; }
 
 h1 {
   font-style: normal;
   font-weight: 900;
   font-size: 3.998em;
   line-height: 1.4;
-  margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
 
 h2 {
   font-size: 2.827em;
   line-height: 1.2;
   margin-bottom: 10px;
   font-style: normal;
-  font-weight: 300;
-}
+  font-weight: 300; }
+
 /*
 Footer
 */
 div#license {
   position: absolute;
   bottom: 0.5em;
-  $current_width: 711px;
-  left: ($slide_width - $current_width)/2;
-}
+  left: 144.5px; }
+
 #license .footer-text {
   margin-left: 1em;
-  font-size: 0.707em;
-}
+  font-size: 0.707em; }
 
 #license img {
-  vertical-align: middle;
-}
+  vertical-align: middle; }
