--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ textarea {
   -webkit-tap-highlight-color: transparent; }
 
 html {
-  font-size: 1.25em; }
+  font-size: 1.5em; }
 
 body {
   font-weight: 200;
@@ -83,8 +83,9 @@ Global Styles
 */
 .slide {
   display: block;
+  opacity: 1;
   width: 1000px;
-  height: 700px;
+  height: 1000px;
   border: 4px solid #00aef0;
   color: #333333;
   background: url("/images/DP_Logo_square.jpg") no-repeat;
@@ -96,7 +97,7 @@ div.slide-text {
 
 .centered {
   text-align: center;
-  margin-top: 175px; }
+  margin-top: 250px; }
 
 a {
   color: #2ec6ff;
@@ -105,22 +106,30 @@ a {
 a:hover {
   text-decoration: underline; }
 
+/* Headers
+ */
 h1, h2 {
-  color: #00aeef; }
+  color: #00aeef;
+  text-align: center; }
 
 h1 {
   font-style: normal;
   font-weight: 900;
-  font-size: 3.998em;
+  font-size: 2.441em;
   line-height: 1.4;
   margin-bottom: 10px; }
 
 h2 {
-  font-size: 2.827em;
+  font-size: 1.953em;
   line-height: 1.2;
   margin-bottom: 10px;
   font-style: normal;
   font-weight: 300; }
+
+/* Lists
+ */
+ul {
+  list-style-type: square; }
 
 /*
 Footer
@@ -128,11 +137,14 @@ Footer
 div#license {
   position: absolute;
   bottom: 0.5em;
-  left: 144.5px; }
+  left: 153px; }
 
 #license .footer-text {
   margin-left: 1em;
-  font-size: 0.707em; }
+  font-size: 0.64em; }
 
-#license img {
-  vertical-align: middle; }
+.slide div.data-container {
+  float: right; }
+  .slide div.data-container img {
+    height: 860px;
+    margin-right: 15px; }
