--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* This is a major third scale */
 /*
  * HTML5 Boilerplate
  *
@@ -91,14 +92,27 @@ Global Styles
   background: url("/images/DP_Logo_square.jpg") no-repeat;
   background-position: top right;
   background-color: white; }
+  .slide img {
+    display: none; }
 
 div.slide-text {
   margin-left: 0.25em;
-  margin-right: 0.25em; }
+  margin-right: 0.25em;
+  display: none; }
+
+div.slide.active div.slide-text {
+  display: block; }
+
+div.slide.active img {
+  display: inline; }
+
+div.slide-text.centered {
+  display: block; }
 
 .centered {
   text-align: center;
-  margin-top: 175px; }
+  margin-top: 175px;
+  display: block; }
 
 a {
   color: #2ec6ff;
@@ -116,12 +130,12 @@ h1, h2 {
 h1 {
   font-style: normal;
   font-weight: 900;
-  font-size: 2.441em;
+  font-size: 2.44141em;
   line-height: 1.4;
   margin-bottom: 10px; }
 
 h2 {
-  font-size: 1.953em;
+  font-size: 1.95312em;
   line-height: 1.2;
   margin-bottom: 10px;
   font-style: normal;
@@ -168,3 +182,10 @@ div#license {
 
 #questions div.slide-text {
   text-align: center; }
+
+div.slide h2.entity-detail-title {
+  font-size: 1.5625em; }
+
+div.slide code.basefield-info,
+div.slide code.access-info {
+  font-size: 0.8em; }
